--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,16 @@
     --light-color: #efefef;
     --dark-color: #3c3c3c;
     --general-transition: all .5s ease;
+    --pad-right: 4rem;
+    --pad-left: 4rem;
 }
 
 html {
     font-family: var(--primary-font);
     scroll-behavior: smooth;
     font-size: 10px;
-    color: var(--dark-color)
+    color: var(--dark-color);
+    overflow-x: hidden;
 }
 
 section {
@@ -301,6 +304,10 @@ ul {
     color: var(--light-color);
 }
 
+/* TOGGLER BUTTON */
+
+
+
 .navbar-toggler {
     font-size: 2.2rem;
     position: absolute;
@@ -333,6 +340,15 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+#services-slider {
+    display: flex;
+    overflow: hidden;
+}
+
+.services-slide {
+    min-width: 100%;
 }
 
 .btn-arrows {
@@ -698,9 +714,6 @@ footer {
 }
 
 
-
-
-
 .social-list li {
     padding: 0;
     text-align: center;
@@ -771,4 +784,183 @@ footer {
     border-color: transparent;
     background-color: var(--light-color);
     color: var(--primary-color);
+}
+
+@media only screen and (max-width: 992px) {    
+    .navbar-toggler {
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav-list {
+        display: block;
+        position: absolute;
+        top: 8rem;
+        left: 0;
+        background-color: var(--primary-color);
+        width: 50%;
+        height: 100vh;
+        opacity: .8;
+        transition: var(--general-transition);
+        transform: translate(-100%);
+    }
+
+    li.nav-item {
+        padding-top: 2rem;
+    }
+
+    .navbar {
+        justify-content: space-around;
+    }
+
+    a.nav-link:hover::after {
+        width: 30%;
+    }
+
+    .main-title {
+        font-size: 7rem;
+    }
+
+    .main-slogan {
+        font-size: 2rem;
+        letter-spacing: 1.4rem;
+    }
+
+    .vertical-title {
+        display: none;
+    }
+
+    .horizontal-title {
+        font-size: 2.5rem;
+    }
+
+    p {
+        font-size: 1.3rem;
+        line-height: 2.2rem;
+    }
+
+    .about-content {
+        padding-right: var(--pad-right);
+    }
+
+    .services-content {
+        padding-left: var(--pad-left);
+    }
+
+    .team-content {
+        padding-right: var(--pad-right);
+    }
+
+    .blog-content {
+        padding-left: var(--pad-left);
+    }
+
+    .copy-right {
+        padding-left: var(--pad-left);
+    }
+
+    .back-top {
+        padding-right: var(--pad-right);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main-title {
+        font-size: 5.5rem;
+    }
+
+    .main-slogan {
+        font-size: 1.5rem;
+        letter-spacing: 1.1rem;
+    }
+
+    .sec-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .about-image {
+        padding-left: var(--pad-left);
+    }
+
+    .services-image {
+        padding-right: var(--pad-right);
+        padding-bottom: 3rem;
+    }
+
+
+
+    .portfolio-items {
+        grid-template-areas: 'item-1 item-1 item-3 item-3' 
+                             'item-1 item-1 item-2 item-2' 
+                             'item-7 item-7 item-4 item-4'
+                             'item-6 item-6 item-4 item-4'
+                             'item-5 item-5 item-8 item-8';
+    }
+
+    .portfolio-item-4 {
+        min-height: 50rem;
+    }
+
+    .portfolio-item-6 {
+        min-height: 25rem;
+    }
+
+    .team-items {
+        padding-left: var(--pad-left);
+    }
+
+    .team-info {
+        margin-top: -15rem;
+    }
+
+    .blog-content {
+        padding-right: var(--pad-right);
+    }
+
+    .contact-content {
+        padding-right: var(--pad-right);
+        padding-left: var(--pad-left);
+    }
+
+    .contact-content h2 {
+        font-size: 3.5rem;
+    }
+
+    .footer-content {
+        grid-template-columns: 1fr;
+    }
+
+    .copy-right p {
+        font-size: 2rem;
+    }
+
+    .copy-right, .back-top, .social-media {
+        justify-self: center;
+        margin: .5rem 0;
+    }
+
+    .social-media h4 {
+        display: none;
+    }
+
+    .back-top {
+        padding-right: 0;
+    }
+
+}
+
+.nav-active {
+    transform: translate(0%);
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px,8px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px,-8px);
 }
